@@ -1,3 +1,8 @@
+2007-11-08: Jason Long <jlong@messiah.edu>
+ * lib/Mail/DKIM/Signature.pm: minor doc edit
+ * scripts/dkimsign.pl: generate "pretty" signatures;
+   die on unrecognized signature type
+
 2007-11-07: Jason Long <jlong@messiah.edu>
  * lib/Mail/DKIM/Algorithm/Base.pm: cleanup (delete commented-out code)
  * lib/Mail/DKIM/Algorithm/dk_rsa_sha1.pm (finish_message): fix bug
